<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginViewModel"
            type="kg.manas.ssn.view.login.viewmodel.LoginViewModel" />
        <import type="android.view.View"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.login.ActivityLogin">

        <ImageView
            android:id="@+id/userPhotoId"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:layout_marginBottom="10dp"
            android:foregroundTintMode="multiply"
            app:layout_constraintBottom_toTopOf="@+id/username_text_input"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:srcCompat="@drawable/ic_group_26"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_text_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"

            android:textColor="#5050CB"
            android:textColorHint="#5050CB"
            app:layout_constraintBottom_toTopOf="@+id/password_text_input"
            app:layout_constraintLeft_toLeftOf="@id/guideline"
            app:layout_constraintRight_toRightOf="@id/guideline2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@={loginViewModel.userName}"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:textColorHint="#5050CB"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintLeft_toLeftOf="@id/guideline2"
            app:layout_constraintRight_toRightOf="@id/guideline"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@id/guideline3"
            app:layout_constraintVertical_bias="0.45">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={loginViewModel.password}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/id_forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/forgot_password"
            android:textColor="#5050CB"
            app:layout_constraintRight_toRightOf="@+id/password_text_input"
            app:layout_constraintTop_toBottomOf="@+id/password_text_input" />

        <Button
            android:id="@+id/id_loginbt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/purple_button_background"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:text="@string/bt_login"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintLeft_toLeftOf="@id/guideline"
            app:layout_constraintRight_toRightOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/password_text_input"
            app:layout_constraintVertical_bias="0.40" />

        <TextView
            android:id="@+id/id_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="#5050CB"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintLeft_toLeftOf="@id/guideline"
            app:layout_constraintRight_toRightOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/id_loginbt"
            app:layout_constraintVertical_bias="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="20dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
