<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.ActivityForgot">

    <ImageButton
        android:id="@+id/back_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/transparent"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintLeft_toRightOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@id/guideline3" />

    <ImageView
        android:id="@+id/userPhotoId"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/forgotPasswordText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/ic_group_26"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/purple"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/inputEmail"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="@+id/guideline2" />

    <TextView
        android:id="@+id/inputEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/inputYourEmail"
        android:textColor="@color/purple"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/centerTextView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        app:layout_constraintRight_toRightOf="@id/guideline2" />

    <TextView
        android:id="@+id/centerTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/weSendVerifyingCode"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        app:layout_constraintRight_toRightOf="@id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_email_text_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:textColorHint="#5050CB"
        app:errorEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/centerTextView">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_email_edit_tex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/id_nextbt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/purple_button_background"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:text="@string/bt_send"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        app:layout_constraintRight_toRightOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/reg_email_text_input" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>