<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="regViewModel"
            type="kg.manas.ssn.view.registration.viewmodel.RegistrationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.registration.RegistrationFragmentPage3">
        <ImageButton
            android:id="@+id/back_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:contentDescription="@string/back"
            android:padding="10dp"
            android:src="@drawable/ic_arrow_back"
            app:flow_horizontalBias="0.5"
            app:layout_constraintLeft_toRightOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@id/guideline3" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/choosePhotoItem"
            android:textColor="@color/purple"

            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline14"

            app:layout_constraintLeft_toLeftOf="@id/guideline"
            app:layout_constraintRight_toRightOf="@id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/guideline3"
            app:layout_constraintVertical_bias="0.75" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/user_photo_icon"
            app:civ_border_color="@color/purple"
            app:civ_border_width="2dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline15"
            app:layout_constraintEnd_toStartOf="@+id/guideline13"
            app:layout_constraintRight_toRightOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline12"
            app:layout_constraintTop_toTopOf="@+id/guideline14" />

        <TextView

            android:id="@+id/uploadPhotoTextClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uploadPhoto"
            android:textColor="@color/purple"
            android:textSize="16sp"
            android:textStyle="bold"

            app:layout_constraintBottom_toTopOf="@+id/guideline7"
            app:layout_constraintLeft_toLeftOf="@id/guideline"

            app:layout_constraintRight_toRightOf="@id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/guideline15" />

        <TextView
            android:id="@+id/textSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fromPhone"
            android:textColor="#454444"
            android:textSize="16sp"
            android:textStyle="bold"

            app:layout_constraintLeft_toLeftOf="@id/guideline"
            app:layout_constraintRight_toRightOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/uploadPhotoTextClick" />

        <Button
            android:id="@+id/btSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/purple_button_background"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:text="@string/skip"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintLeft_toLeftOf="@id/guideline"
            app:layout_constraintRight_toRightOf="@id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/guideline7" />

        <ImageView
            android:id="@+id/id_status2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_statusregpage3"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintLeft_toLeftOf="@id/guideline"
            app:layout_constraintRight_toRightOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/btSkip"
            app:layout_constraintVertical_bias="0.3" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.75" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>