<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:elevation="20dp"
            android:gravity="center"
            app:contentInsetStart="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/rubik_bold"
                    android:padding="14dp"
                    android:text="@string/comments"
                    android:textAllCaps="true"
                    android:textColor="#5A5A5A"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/backCommentActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:background="@color/transparent"
                    android:padding="10dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_arrow_back" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_comments"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/comments_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_above="@id/replyLinear"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:id="@+id/replyLinear"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/transparent"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    android:weightSum="10"
                    android:layout_above="@id/inputBar">

                    <TextView
                        android:id="@+id/replyAddressShower"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="15dp"
                        android:layout_weight="9"
                        android:text="@string/app_name" />

                    <ImageView
                        android:id="@+id/cancelReplyButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:contentDescription="@string/app_name"
                        android:padding="7dp"
                        android:src="@drawable/ic_cancel_view" />

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/inputBar"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:padding="5dp"
                    android:layout_alignParentBottom="true">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/myPhoto"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="5dp"
                        android:gravity="center_vertical"
                        android:src="@drawable/user_photo_icon"
                        app:civ_border_color="@color/purple"
                        app:civ_border_width="1dp" />

                    <EditText
                        android:id="@+id/commentEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_toStartOf="@id/addCommentButton"
                        android:layout_toEndOf="@id/myPhoto"
                        android:autofillHints=""
                        android:background="@drawable/rounder_edittext"
                        android:hint="@string/comment"
                        android:inputType="text"
                        android:lines="4"
                        android:maxHeight="120dp"
                        android:minLines="1"
                        android:padding="5dp"
                        android:scrollbars="vertical" />

                    <Button
                        android:id="@+id/addCommentButton"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/rounder_edittext"
                        android:text="@string/add" />
                </RelativeLayout>
            </RelativeLayout>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </LinearLayout>
</layout>